--- a/task-tracker/.vscode/settings.json
+++ b/task-tracker/.vscode/settings.json
@@ -5,7 +5,60 @@
     "**/.hg": true,
     "**/CVS": true,
     "**/.DS_Store": true,
-    "**/Thumbs.db": true
+    "**/Thumbs.db": true,
+    "src/assets": true,
+    ".editorconfig": true,
+    ".gitignore": true,
+    "angular.json": true,
+    "package-lock.json": true,
+    "package.json": true,
+    "tsconfig.app.json": true,
+    "tsconfig.json": true,
+    "tsconfig.spec.json": true,
+    "README.md": true,
+    "src/main.ts": true,
+    "src/favicon.ico": true,
+    "src/app/components/button/button.component.spec.ts": true,
+    "src/app/components/header/header.component.spec.ts": true,
+    ".angular/cache/17.0.9": true,
+    "node_modules": true,
+    ".vscode": true,
+    "src/app/app.component.spec.ts": true
   },
-  "hide-files.files": []
+  "hide-files.files": [
+    "src/assets",
+    ".editorconfig",
+    ".gitignore",
+    "angular.json",
+    "package-lock.json",
+    "package.json",
+    "tsconfig.app.json",
+    "tsconfig.json",
+    "tsconfig.spec.json",
+    "README.md",
+    "src/main.ts",
+    "src/favicon.ico",
+    "src/app/components/button/button.component.spec.ts",
+    "src/app/components/header/header.component.spec.ts",
+    ".angular/cache/17.0.9",
+    "node_modules",
+    ".vscode",
+    "src/app/app.component.spec.ts"
+  ],
+  "workbench.colorCustomizations": {
+    "editor.selectionBackground": "#06ff27",
+    "editor.selectionForeground": "#06ff27",
+    "editor.wordHighlightStrongBorder": "#09ff0079",
+    "editor.wordHighlightStrongBackground": "#09ff0000",
+    "editor.selectionHighlightBackground": "#f0f5f138",
+    "editor.wordHighlightBorder": "#09ff0079",
+    "editor.wordHighlightBackground": "#15ff0000",
+    "editor.findMatchHighlightBorder": "#00ff0075",
+    "editorCursor.foreground": "#ffff00",
+    "tab.activeBorder": "#89CFF0",
+    "titleBar.activeBackground": "#89CFF0",
+    "titleBar.activeForeground": "#000000",
+    "statusBar.background": "#89CFF0",
+    "statusBar.foreground": "#000000"
+  }
 }
